# nebula

./: .gitignore  .gitmodules  CMakeLists.txt  Nebula  README.md
.cache/clangd/index/: Application.cpp.0AA29B645B686AFD.idx  glad.c.1B61606E5C0C8471.idx  glad.h.C207DD9C474B03A0.idx  khrplatform.h.47F39A8EB8D27C7B.idx
.github/workflows/: build.yml  cmake-multi-platform.yml
include/glad/: glad.h
resources/Shaders/Julia/: juliaFrag.glsl
resources/Shaders/Julia Complex Dynamics/: juliaComplexDynamicsFrag.glsl
resources/Shaders/Mandelbrot/: mandelbrotFrag.glsl  mandelbrotVert.glsl
resources/Shaders/Newton/: newtonFrag.glsl
src/: Application.cpp  ComplexNumber.cpp  ComplexNumber.h  Constants.h  Fractal.cpp  Fractal.h  FractalRenderer.cpp  FractalRenderer.h  FractalSet.cpp  FractalSet.h  Pixel.cpp  Pixel.h  main.cpp
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp  Shader.h  ShaderAttribute.cpp  ShaderAttribute.h  ShaderAttributeManager.cpp  ShaderAttributeManager.h  ShaderAttributeManager.inl
src/ShaderFiles/Mandelbrot/: Mandelbrot_fragment_shader.glsl  Mandelbrot_vertex_shader.glsl
src/Window/: GUI.cpp  GUI.h  Input.cpp  Input.h  Window.cpp  Window.h
